setting dir for sonar code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     <properties>
         <java.version>21</java.version>
         <jember-cryptography.version>0.7.0</jember-cryptography.version>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencyManagement>
