--- a/.github/workflows/build-push-image.yaml
+++ b/.github/workflows/build-push-image.yaml
@@ -56,7 +56,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: mvn -B clean verify
+        run: ./mvnw -B clean verify
 
       - name: 'Login to Quay'
         uses: docker/login-action@v3
