--- a/.github/workflows/build-push-image.yaml
+++ b/.github/workflows/build-push-image.yaml
@@ -109,6 +109,12 @@ jobs:
             ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
+      - name: Generate changelog
+        id: changelog
+        uses: metcalfc/changelog-generator@v4.3.1
+        with:
+          myToken: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
@@ -134,7 +140,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "GitHub Action - Data Intake RAG Release: ${{ steps.bump.outputs.new_tag }}\n Job Status: ${{ job.status }}\n ### Things that changed in this release\n ${{ steps.changelog.outputs.changelog }} \n \n ${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    "text": "GitHub Action - Data Intake RAG Release: ${{ steps.bump.outputs.new_tag }}\n Job Status: ${{ job.status }}\n [Release Information](https://github.com/jemberai/data-intake-rag-service/releases/tag/${{ steps.bump.outputs.new_tag }})   \n ${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
                   }
                 }
               ]
